# tesla-smart-charger

./: .gitignore  404.html  Dockerfile  Dockerfile.tesla-http-proxy  Dockerfile.tesla-keygen  Dockerfile.tesla-smart-charger  LICENSE  MIGRATION.md  README-VC.md  README.md  config.json  docker-compose.yaml  index.html  mkdocs.yml  non-existing-config.json  pyproject.toml  quick-start.html
.github/workflows/: docs.yml  tox.yml
certs/: README.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: auth.ts  client.ts  config.ts  history.ts  status.ts  vehicles.ts
dashboard/src/components/layout/: MainLayout.tsx  Sidebar.tsx
dashboard/src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx  Spinner.tsx
dashboard/src/hooks/: useConfig.ts  useHistory.ts  useStatus.ts  useVehicles.ts
dashboard/src/pages/Dashboard/: index.tsx
dashboard/src/pages/History/: index.tsx
dashboard/src/pages/Onboarding/: index.tsx
dashboard/src/pages/Onboarding/steps/: Step10Done.tsx  Step1Welcome.tsx  Step2RegionVoltage.tsx  Step3TeslaApp.tsx  Step4TeslaAuth.tsx  Step5SelectVehicles.tsx  Step6ChargerSettings.tsx  Step7EnergyMonitor.tsx  Step8CircuitStrategy.tsx  Step9Security.tsx
dashboard/src/pages/Settings/: index.tsx
dashboard/src/pages/Vehicles/: index.tsx
docs/: index.md  quick-start.md
tesla_smart_charger/: __init__.py  __main__.py  app_config.py  charger_config.py  constants.py  logger.py  main.py  models.py  tesla_api.py  tesla_config.py  token_cron.py  utils.py
tesla_smart_charger/controllers/: __init__.py  db_controller.py  em_controller.py  shelly_em_controller.py  sqlite_db_controller.py
tesla_smart_charger/cron/: __init__.py  em_cron.py  token_cron.py
tesla_smart_charger/handlers/: __init__.py  overload_handler.py
tesla_smart_charger/routes/: __init__.py  auth_routes.py  config_routes.py  history_routes.py  status_routes.py  vehicle_routes.py
tesla_smart_charger/website/: index.html  style.css
tests/: test_api_endpoints.py  test_app_config.py  test_charger_config.py  test_main.bak  test_overload_handler.py  test_tesla_config.py
