[tool.poetry]
name = "tesla-smart-charger"
version = "1.0.0"
description = "Dynamic charge your tesla using default charger"
authors = ["Pedro Baptista <pedro.miguel.baptista@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["tesla", "smart", "charger"]
include = ["pyproject.toml", "LICENSE", "README.md"]
exclude = ["tests/*"]
packages = [
    { include = "tesla_smart_charger", from = "." },
]

[project.urls]
homepage = "https://github.com/codesquadnest/tesla-smart-charger"
repository = "https://github.com/codesquadnest/tesla-smart-charger"
changelog = "https://github.com/codesquadnest/tesla-smart-charger/releases"
documentation = "https://github.com/codesquadnest/tesla-smart-charger/blob/main/README.md"

[tool.poetry.scripts]
tesla-smart-charger = "tesla_smart_charger.__main__:main"

[tool.poetry.dependencies]
python = "^3.8, <4.0"
requests = "^2.32.3"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
retrying = "^1.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
ruff = "^0.7.2"
pytest-cov = "^5.0.0"
tox = "^4.23.2"
httpx = "^0.27.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocs-mermaid2-plugin = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configurations for black
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
lint.extend-ignore = "E501"

# Configurations for pytest
[tool.pytest]
addopts = ["-ra", "--cov=tesla_smart_charger", "--cov-report=term-missing"]
testpaths = ["tests"]

[toolpytest.cov]
fail_under = 80

[lint.ruff]
ignore = [
  "T201", # print() used
  "S104", # bind to all interfaces
  "S105", # possible hardcoded password
  "D201", # No blank lines allowed before function docstring
  "D211", # No blank lines allowed before class docstring
  "D212", # No blank lines allowed after function docstring
  "PLR2004", # Use Magic Numbers
  "PLW0603", # Use of global statement
  "ERA001", # Found commented-out code
]
extend-ignore = ["N815"] # mixedCase variable in function scope
lint.select = ["ALL"]
target-version = "py310"
# Same as Black.
line-length = 88

[lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Use of assert detected.

[lint.mccabe]
# Implicit 10 is too low for our codebase, even black uses 18 as default.
max-complexity = 20

[lint.flake8-builtins]
builtins-ignorelist = ["id"]

# Configurations for tox
[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py310, lint, docs
    skipsdist = True
    skip_missing_interpreters = True

    [testenv]
    deps =
        poetry
    commands =
        poetry install -v
        poetry run pytest --cov=tesla_smart_charger --cov-report=term-missing
    
    [testenv:lint]
    deps =
        ruff
    commands =
        ruff check tesla_smart_charger tests
    
    [testenv:docs]
    deps =
        mkdocs
        mkdocs-material
        mkdocs-mermaid2-plugin
    commands =
        mkdocs build

"""
