[project]
name = "tesla-smart-charger"
version = "1.1.2"
description = "Dynamic charge your tesla using default charger"
authors = [{ name = "Pedro Baptista", email = "pedro.miguel.baptista@gmail.com" }]
requires-python = ">3.9.1, <4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "tesla",
    "smart",
    "charger",
]
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.33.0",
    "retrying>=1.3.4",
]
include = [
    "pyproject.toml",
    "LICENSE",
    "README.md",
]
exclude = ["tests/*"]
packages = [{ from = ".", include = "tesla_smart_charger" }]

[project.urls]
homepage = "https://github.com/codesquadnest/tesla-smart-charger"
repository = "https://github.com/codesquadnest/tesla-smart-charger"
changelog = "https://github.com/codesquadnest/tesla-smart-charger/releases"
documentation = "https://github.com/codesquadnest/tesla-smart-charger/blob/main/README.md"

[project.scripts]
tesla-smart-charger = "tesla_smart_charger.__main__:main"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pytest-cov>=5.0.0",
    "tox>=4.23.2",
    "httpx>=0.28.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = ["-ra", "--cov=tesla_smart_charger", "--cov-report=term-missing"]
testpaths = ["tests"]

[toolpytest.cov]
fail_under = 80

[lint.ruff]
ignore = [
  "T201", # print() used
  "S104", # bind to all interfaces
  "S105", # possible hardcoded password
  "D201", # No blank lines allowed before function docstring
  "D211", # No blank lines allowed before class docstring
  "D212", # No blank lines allowed after function docstring
  "PLR2004", # Use Magic Numbers
  "PLW0603", # Use of global statement
  "ERA001", # Found commented-out code
]
extend-ignore = ["N815"] # mixedCase variable in function scope
lint.select = ["ALL"]
target-version = "py310"
# Same as Black.
line-length = 88

[lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Use of assert detected.

[lint.mccabe]
# Implicit 10 is too low for our codebase, even black uses 18 as default.
max-complexity = 20

[lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py{310,311,312,313}, lint, docs
    skipsdist = True
    skip_missing_interpreters = True

    [testenv]
    allowlist_externals = uv
    deps =
        pytest
        pytest-cov
    commands =
        uv run --active pytest --cov=tesla_smart_charger --cov-report=term-missing
    
    [testenv:lint]
    deps =
        ruff
    commands =
        ruff check tesla_smart_charger tests
    
    [testenv:docs]
    deps =
        mkdocs
        mkdocs-material
        mkdocs-mermaid2-plugin
    commands =
        mkdocs build

"""
